some update here and there

--- a/resources/style/beautifull.css
+++ b/resources/style/beautifull.css
@@ -18,7 +18,7 @@
     position:relative
   }
 
-  .overlay {
+.overlay {
 position:absolute;
 top:0px;
 left:0px;
@@ -41,8 +41,7 @@ z-index:1;
     text-decoration: none;
     text-align: center;
   }
-  
- 
+   
   /* Column container */
   .row {  
     display: flex;
@@ -109,8 +108,9 @@ z-index:1;
   
   /* Change color on hover */
   .navbar a:hover {
-    background-color: #ddd;
-    color: black;
+   background-color: #333;
+    color: rgb(225, 250, 6); 
+	font-style: italic;
   }
   
   
